--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="quicksand-font">
+  <body class="quicksand-font raleway-font">
     <header>
       <section class="header-container">
         <nav class="menu">
@@ -52,39 +52,135 @@
       </section>
     </header>
     <main>
-        <section class="curriculum">
-            <h2 class="curriculum-title">Standard Curriculum</h2>
-            <div class="curriculum-container">
-                <div class="curriculum-card-1">
-                    <img src="assets/kinder.png" alt="">
-                    <h3 class="card-title">Kinder (3-6) Years</h3>
-                    <p class="card-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-                    <h4 class="read clr-2">Read More</h4>
-                </div>
-            <div class="curriculum-container">
-                <div class="curriculum-card-2">
-                    <img src="assets/elementary.png" alt="">
-                    <h3 class="card-title">Elementary School</h3>
-                    <p class="card-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-                    <h4 class="read clr-1">Read More</h4>
-                </div>
-            <div class="curriculum-container">
-                <div class="curriculum-card-3">
-                    <img src="assets/middle.png" alt="">
-                    <h3 class="card-title">Middle (10-16) Years</h3>
-                    <p class="card-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-                    <h4 class="read clr-5">Read More</h4>
-                </div>
-               
-            </div>
+      <section class="curriculum">
+        <h2 class="curriculum-title">Standard Curriculum</h2>
+        <div class="curriculum-container">
+          <div class="curriculum-card-1">
+            <img src="assets/kinder.png" alt="" />
+            <h3 class="card-title">Kinder (3-6) Years</h3>
+            <p class="card-description">
+              Cum sociis natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mu sdis parturient
+            </p>
+            <h4 class="read clr-2">Read More</h4>
+          </div>
+
+          <div class="curriculum-card-2">
+            <img src="assets/elementary.png" alt="" />
+            <h3 class="card-title">Elementary School</h3>
+            <p class="card-description">
+              Cum sociis natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mu sdis parturient
+            </p>
+            <h4 class="read clr-1">Read More</h4>
+          </div>
+
+          <div class="curriculum-card-3">
+            <img src="assets/middle.png" alt="" />
+            <h3 class="card-title">Middle (10-16) Years</h3>
+            <p class="card-description">
+              Cum sociis natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mu sdis parturient
+            </p>
+            <h4 class="read clr-5">Read More</h4>
+          </div>
+        </div>
+        <section class="arrow hide">
+          <div class="one"><i class="fa-solid fa-less-than"></i></div>
+          <div class="two"><i class="fa-solid fa-greater-than"></i></div>
         </section>
+      </section>
+      <section class="story">
+        <h1 class="story-title">Our Stories</h1>
+        <div class="story-container">
+          <div class="story-card-1 hide">
+            <img src="assets/story-1.png" alt=" " />
+            <div class="card-button">
+              <button class="btn-card1">November 19 2019</button>
+            </div>
+            <h3 class="story-card-title">
+              A fun toddler coloring training on classroom
+            </h3>
+            <p class="story-description">
+              Beautiful branding for changes by Never Now in Australia. changes
+              is a platform for open discussion in an inclusive and
+              collaborative environment, providing the...
+            </p>
+          </div>
+          <div class="story-grid">
+            <div class="story-card">
+              <img src="assets/story-2.png" alt=" " />
+              <div class="card-button">
+                <button class="btn-card1 btns">November 19 2019</button>
+              </div>
+              <h3 class="story-card-title-2">
+                Find out if a school fits the family’s needs
+              </h3>
+            </div>
+            <div class="story-card">
+              <img src="assets/story-3.png" alt=" " />
+              <div class="card-button">
+                <button class="btn-card1 btnd">November 19 2019</button>
+              </div>
+              <h3 class="story-card-title-2">
+                Summer math & literacy centres for kids
+              </h3>
+            </div>
+            <div class="story-card">
+              <img src="assets/story-4.png" alt=" " />
+              <div class="card-button">
+                <button class="btn-card1 btns">September 19 2019</button>
+              </div>
+              <h3 class="story-card-title-2">
+                Classroom management techniques for new tutors
+              </h3>
+            </div>
+            <div class="story-card">
+              <img src="assets/story-5.png" alt=" " />
+              <div class="card-button">
+                <button class="btn-card1 btns">July 19 2019</button>
+              </div>
+              <h3 class="story-card-title-2">
+                Conversation rhymes improve kids listening
+              </h3>
+            </div>
+          </div>
+        </div>
+        <div class="view-btn">
+          <button class="btn-2">View All</button>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-logo">
+          <div class="flex ddd">
+            <img src="assets/Group 1.png" alt="" />
+            <h1 class="footer-title">Kids <br />Education</h1>
+          </div>
+          <p class="footer-description">
+            Beautiful branding for changes by Never Now in Australia. changes is
+            a platform for open discussion in an inclusive and collaborative
+            environment, providing
+          </p>
+        </div>
+        <div class="footer-menu">
+          <h2 class="footer-title2">About School</h2>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Facilities</li>
+            <li>Admission</li>
+          </ul>
+        </div>
+        <div class="keep">
+          <h2 class="keepin">Keep in Touch</h2>
+          <img src="assets/fb.png" alt="" />
+          <img src="assets/google+.png" alt="" />
+          <img src="assets/twitter.png" alt="" />
+          <img src="assets/dribble.png" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
