--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
           <div class="button hide"><button class="btn">Contact</button></div>
           <div class="bar hide-2"><i class="fa-solid fa-bars"></i></div>
         </nav>
+        <hr
+          class="dag hide-2"
+          style="
+            height: 2px;
+            border-width: 0;
+            color: orange;
+            background-color: orange;
+          "
+        />
         <div class="banner-container">
           <div class="banner-info">
             <h1 class="banner-title">
