--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body class="quicksand-font raleway-font">
     <header>
+      <marquee class="mar hide"
+        >31st January is the last day of Admission</marquee
+      >
+
       <section class="header-container">
         <nav class="menu">
           <div class="logo flex">
