added some correction

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="quicksand-font raleway-font">
+  <body class="quicksand-font">
     <header>
       <marquee class="mar hide"
         >31st January is the last day of Admission</marquee
